--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐒𝐚𝐬𝐮𝐤𝐞 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "𝐈𝐭𝐚𝐜𝐡𝐢 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
     "PREFIX": "!",
     "ADMINBOT": [
         "100077459922479",
